# tf-idf-vectorizer

./: -  .gitignore  .gitmodules  Cargo.toml  README-ja.md  README-jp.md  README.md  check  doc-search-test.md  idx.cbor  memo.md  umekomi
benches/: benchmark.rs
document/: SparceVec.md  index.md  interface..md
examples/: basic.rs  merge.rs
src/: analyzer.rs  csvec_trait.rs  index.rs  lib.rs  main.rs  par_token.rs  tf_idf.rs  token.rs
src/engine/: mod.rs  tool.rs
src/engine/jp_tokenizer/: mod.rs  tokenizer.rs
src/utils/: mod.rs  normalizer.rs  scaler.rs  sort.rs
src/utils/datastruct/: mod.rs
src/utils/datastruct/arena/: mod.rs
src/utils/datastruct/map/: bit_map.rs  index_map.rs  mod.rs  serde.rs
src/utils/datastruct/vector/: idf.rs  mod.rs  serde.rs  tf.rs
src/utils/math/vector/: math.rs  math_normalized.rs  mod.rs  serde.rs
src/vectorizer/: README.md  analyzer.rs  compare.rs  csvec_trait.rs  index.rs  mod.rs  search.rs  serde.rs  term.rs  tfidf.rs  token.rs
src/vectorizer/compute/: compare.rs  mod.rs
src/vectorizer/corpus/: mod.rs
src/vectorizer/evaluate/: mod.rs  query.rs  scoring.rs
src/vectorizer/index/: mod.rs  query.rs  search.rs  try_serde.rs
test_data_set/: check  umekomi  wikipedia_dl.py
