[package]
name = "tf-idf-vectorizer"
version = "0.5.5"
edition = "2024"
description = "A simple search and analyze engine"
license = "MIT"
repository = "https://github.com/371tti/tf-idf-vectorizer"
keywords = ["search", "tf", "idf", "analyze"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
num = "0.4.3"
dashmap = { version = "6.1.0", features = ["serde"] }
ahash = "0.8.12"
indexmap = { version = "2.11.4", features = ["serde"] }


