[package]
name = "tf-idf-vectorizer"
version = "0.5.8"
edition = "2024"
description = "A simple search and analyze engine"
license = "MIT"
repository = "https://github.com/371tti/tf-idf-vectorizer"
keywords = ["search", "tf", "idf", "analyze"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
num-traits = "0.2.19"
dashmap = { version = "6.1.0", features = ["serde"] }
ahash = "0.8.12"
indexmap = { version = "2.11.4", features = ["serde"] }


